--- a/modal/styles.css
+++ b/modal/styles.css
@@ -41,8 +41,8 @@
    box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2); 
    text-align: center;
    padding: 30px;
-   border-radius: 10px;
-   background-color: rgb(64, 197, 135);
+   border-radius: 3px;
+   background-color: #fff;
    transition: 0.3s all;
 }
 
